--- a/units/tests/standard_test/operations.yml
+++ b/units/tests/standard_test/operations.yml
@@ -20,6 +20,7 @@ enable-cc-v2-rate-limiting.yml:
   - cc_v2_rate_limiter_admin_limit=something
   - cc_v2_rate_limiter_reset_interval_in_minutes=else
 enable-cc-worker-metrics.yml: {}
+enable-scheduler-metrics.yml: {}
 enable-cpu-throttling.yml: {}
 enable-nfs-ldap.yml:
   ops:
