--- a/ci/pipelines/cf-deployment.yml
+++ b/ci/pipelines/cf-deployment.yml
@@ -608,6 +608,7 @@ jobs:
         operations/enable-nfs-volume-service.yml
         operations/test/enable-nfs-test-server.yml
         operations/change-deployment-name-for-nfs-test-server.yml
+        operations/use-noble-stemcell.yml
       VARS_FILES: |
         environments/test/luna/deployment-name.yml
         environments/test/luna/network-name.yml
